# odbc-sys

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Changelog.md  README.md  appveyor.yml  build.rs  check-static.sh  docker-compose.yml  release-plz.toml
.github/: dependabot.yml
.github/worflows/: test.yml
.github/workflows/: release.yml  test.yml
examples/: static_test.rs
iodbc-sys/: Cargo.toml  README.md  build.rs
iodbc-sys/src/: lib.rs
iodbc-sys/tests/: lib.rs
odbc-sys/: Cargo.toml  LICENSE  README.md
odbc-sys-core/: Cargo.toml  build.rs
odbc-sys-core/src/: bulk_operation.rs  desc.rs  fetch_orientation.rs  functions.rs  lib.rs  set_pos.rs
odbc-sys-derive/: Cargo.toml
odbc-sys-derive/src/: lib.rs
odbc-sys/src/: lib.rs
odbc-sys/tests/: lib.rs
src/: attributes.rs  bulk_operation.rs  c_data_type.rs  connection_attribute.rs  desc.rs  fetch_orientation.rs  function_id.rs  functions.rs  handles.rs  indicator.rs  info_type.rs  input_output.rs  interval.rs  lib.rs  nullability.rs  nullable.rs  param_type.rs  set_pos.rs  sql_bulk_operations.rs  sql_data_type.rs  sqlreturn.rs  test.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: lib.rs
unix-odbc/: CHANGELOG.md  Cargo.toml  build.rs  config.h  ltdl.h  vendor-unix-odbc-source.sh
unix-odbc/unixODBC/: AUTHORS  ChangeLog  Makefile.in  Makefile.svn  aclocal.m4  config.h.in  configure  unixodbc_conf.h  unixodbc_conf.h.in
unix-odbc/unixODBC/DRVConfig/: Makefile.in
unix-odbc/unixODBC/DRVConfig/Mimer/: Makefile.in
unix-odbc/unixODBC/DRVConfig/MiniSQL/: Makefile.in
unix-odbc/unixODBC/DRVConfig/MySQL/: Makefile.in
unix-odbc/unixODBC/DRVConfig/Oracle/: Makefile.in
unix-odbc/unixODBC/DRVConfig/PostgreSQL/: Makefile.in
unix-odbc/unixODBC/DRVConfig/drvcfg1/: Makefile.in
unix-odbc/unixODBC/DRVConfig/drvcfg2/: Makefile.in
unix-odbc/unixODBC/DRVConfig/esoob/: Makefile.in
unix-odbc/unixODBC/DRVConfig/nn/: Makefile.in
unix-odbc/unixODBC/DRVConfig/oplodbc/: Makefile.in
unix-odbc/unixODBC/DRVConfig/sapdb/: Makefile.in
unix-odbc/unixODBC/DRVConfig/tds/: Makefile.in
unix-odbc/unixODBC/DRVConfig/template/: Makefile.in
unix-odbc/unixODBC/DRVConfig/txt/: Makefile.in  drvcfg.c
unix-odbc/unixODBC/DriverManager/: Makefile.in  SQLFreeHandle.c
unix-odbc/unixODBC/Drivers/: Makefile.in
unix-odbc/unixODBC/Drivers/MiniSQL/: Makefile.in
unix-odbc/unixODBC/Drivers/Postgre7.1/: Makefile.in
unix-odbc/unixODBC/Drivers/nn/: Makefile.in  yyparse.c
unix-odbc/unixODBC/Drivers/template/: Makefile.in
unix-odbc/unixODBC/cur/: Makefile.in
unix-odbc/unixODBC/doc/: Makefile.in
unix-odbc/unixODBC/doc/AdministratorManual/: Makefile.in
unix-odbc/unixODBC/doc/ProgrammerManual/: Makefile.in
unix-odbc/unixODBC/doc/ProgrammerManual/Tutorial/: Makefile.in
unix-odbc/unixODBC/doc/UserManual/: Makefile.in
unix-odbc/unixODBC/doc/lst/: Makefile.in
unix-odbc/unixODBC/exe/: Makefile.in
unix-odbc/unixODBC/extras/: Makefile.in
unix-odbc/unixODBC/include/: Makefile.in
unix-odbc/unixODBC/ini/: Makefile.in
unix-odbc/unixODBC/log/: Makefile.in
unix-odbc/unixODBC/lst/: Makefile.in
unix-odbc/unixODBC/man/: Makefile.in
unix-odbc/unixODBC/odbcinst/: Makefile.in
unix-odbc/unixODBC/samples/: Makefile.in
unixodbc-sys/: Cargo.toml  LICENSE  README.md  build.rs
unixodbc-sys/src/: lib.rs
unixodbc-sys/tests/: lib.rs
