[workspace]
resolver = "2"
members = [
    "odbc-sys-core",
    "unixodbc-sys",
    "iodbc-sys",
]

[workspace.package]
authors = ["Markus Klein"]
repository = "https://github.com/pacman82/odbc-sys"
keywords = ["sql", "database", "odbc", "ffi"]
categories = ["external-ffi-bindings", "database"]
edition = "2021"

[profile.release]
lto = true
