[package]
name = "odbc-sys-core"
version = "0.1.0"
authors.workspace = true
license = "MIT"
description = "Core ODBC types and declarations (internal use only)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
publish = false

[dependencies]

[features]
default = ["odbc_version_3_80"]
odbc_version_3_50 = []
odbc_version_3_80 = ["odbc_version_3_50"]
odbc_version_4 = ["odbc_version_3_80"]

