[package]
name = "odbc-sys"
version = "0.1.0"
authors.workspace = true
license = "MIT OR LGPL-2.1-or-later"
description = "FFI bindings for ODBC (supports unixODBC and iODBC)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
odbc-sys-core = { path = "../odbc-sys-core", version = "0.1.0" }
unixodbc-sys = { path = "../unixodbc-sys", version = "0.1.0", features = ["static"], optional = true }
iodbc-sys = { path = "../iodbc-sys", version = "0.1.0", features = ["static"], optional = true }

[features]
default = ["odbc_version_3_80"]
unixodbc-sys = ["static", "unixodbc", "dep:unixodbc-sys"]
iodbc-sys = ["static", "iodbc", "dep:iodbc-sys"]
static = []
iodbc = []
unixodbc = []

odbc_version_3_50 = ["odbc-sys-core/odbc_version_3_50"]
odbc_version_3_80 = ["odbc_version_3_50", "odbc-sys-core/odbc_version_3_80"]
odbc_version_4 = ["odbc_version_3_80", "odbc-sys-core/odbc_version_4"]

