[package]
name = "unix-odbc"
version = "0.1.2"
edition = "2024"
description = '''
The unixODBC driver manager. It builds the unixODBC C-library, not the rust bindings to it. It is
intended to support the `vendored-unix-odbc` feature `odbc-sys`. Therefore it is recommend to use
`odbc-sys` as a dependency rather than to consume this crate directly.
'''
license = "LGPL-2.1-or-later"

[dependencies]

[build-dependencies]
# Used to build unixODBC
autotools = "0.2.7"
# Used to copy unixODBC source into our build directory
fs_extra = "1.3.0"
